# PublicScholarTracker

./: README.md  app.py  data_generator.py  data_integration.py  database.py  models.py  pyproject.toml  utils.py
.streamlit/: config.toml
scrapers/: government_scraper.py
